# Render-Rust-vk-Truvis

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  build.rs  justfile  resources.toml  rustfmt.toml
crates/shader-layout-macro/: Cargo.toml
crates/shader-layout-macro/examples/: shader_layout_example.rs
crates/shader-layout-macro/src/: lib.rs
crates/truvis-app/: Cargo.toml
crates/truvis-app/src/: app.rs  lib.rs  outer_app.rs  render_app.rs
crates/truvis-app/src/gui/: core.rs  gui.rs  gui_mesh.rs  gui_pass.rs  gui_vertex_layout.rs  mod.rs
crates/truvis-app/src/platform/: camera_controller.rs
crates/truvis-app/src/window_system/: main_window.rs
crates/truvis-asset/: Cargo.toml
crates/truvis-asset/src/: asset_hub.rs  asset_loader.rs  asset_upload_manager.rs  handle.rs  lib.rs  loader.rs  transfer.rs
crates/truvis-crate-tools/: Cargo.toml
crates/truvis-crate-tools/src/: init_log.rs  lib.rs  named_array.rs  resource.rs
crates/truvis-cxx/: Cargo.toml  build.rs
crates/truvis-cxx/cxx/: .gitignore  CMakeLists.txt  CMakePresets.json  build.md  main.cpp  regen.nu
crates/truvis-cxx/cxx/.github/: copilot-instructions.md
crates/truvis-cxx/src/: lib.rs  main.rs
crates/truvis-cxx/truvis-cxx-binding/: .gitignore  Cargo.toml  build.rs
crates/truvis-cxx/truvis-cxx-build/: Cargo.toml
crates/truvis-gfx/: Cargo.toml
crates/truvis-gfx/src/: gfx.rs  gfx_core.rs  lib.rs  render_context.rs  sampler.rs  sampler_manager.rs
crates/truvis-gui/: Cargo.toml
crates/truvis-model/: Cargo.toml
crates/truvis-model-manager/: Cargo.toml
crates/truvis-model-manager/src/: assimp_loader.rs  guid_new_type.rs  lib.rs
crates/truvis-model/src/: guid_new_type.rs
crates/truvis-render/: Cargo.toml
crates/truvis-render/src/: app.rs  lib.rs  outer_app.rs  pipeline_settings.rs  subsystem.rs
crates/truvis-render/truvis-render-base/: Cargo.toml
crates/truvis-render/truvis-render-core/: Cargo.toml
crates/truvis-render/truvis-render-graph/: Cargo.toml
crates/truvis-render/truvis-render-scene/: Cargo.toml
crates/truvis-rhi/: Cargo.toml
crates/truvis-rhi/src/: lib.rs  render_context.rs  rhi.rs  vulkan_context.rs  vulkan_core.rs
crates/truvis-shader-layout-macro/: Cargo.toml
crates/truvis-shader-layout-macro/examples/: shader_layout_example.rs
crates/truvis-shader-layout-macro/src/: lib.rs
crates/truvis-shader/truvis-shader-build/: Cargo.toml
cxx/: vcpkg.json  (+2 more)
engine/: Cargo.toml
engine/crates/truvis-app/: Cargo.toml
engine/crates/truvis-asset/: Cargo.toml
engine/crates/truvis-gfx/: Cargo.toml
engine/crates/truvis-gui-backend/: Cargo.toml
engine/crates/truvis-model/: Cargo.toml
engine/crates/truvis-platform/: Cargo.toml
engine/crates/truvis-render-graph/: Cargo.toml
engine/crates/truvis-render-interface/: Cargo.toml
engine/crates/truvis-renderer/: Cargo.toml
engine/crates/truvis-resource/: Cargo.toml
engine/crates/truvis-scene/: Cargo.toml
engine/cxx/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
engine/shader/: README.md
engine/shader/include/: bindless_op.slangi  frame_data.slangi  geometry.slangi  light.slangi  pbr.slangi  vertex_attribute.slangi
engine/shader/lib/: bindless_op.slangi  env_map.slangi  gbuffer.slangi  irradiance_cache.slangi  mis.slangi  pbr.slangi
engine/shader/share/: __common.slangi  __pass.slangi  geometry.slangi  global_binding_sets.slangi  irradiance_cache_data.slangi  light.slangi  material.slangi  scene.slangi
shader-gen/: Cargo.toml  build.rs
shader-gen/definitions/: shader_layouts.yaml
shader-gen/src/: lib.rs  prelude.rs
shader-gen/templates/: tera.hlsl  tera.rs
third_libs/assimp/cxx/: CMakeLists.txt  main.cpp  vcpkg.json
truvis-render/: Cargo.toml
truvis-render/examples/: hello_triangle.rs  phong.rs  shader_toy.rs
truvis-render/examples/hello-raytracing/: main.rs
truvis-render/examples/hello_rt/: main.rs
truvis-render/examples/hello_triangle/: main.rs
truvis-render/examples/phong/: data.rs  main.rs
truvis-render/examples/shader_toy/: main.rs
truvis-render/shader/hello_triangle/: triangle.frag  triangle.vert
truvis-render/src/: app.rs  frame_context.rs  lib.rs  main.rs  outer_app.rs  pipeline_settings.rs  render.rs  render_context.rs  render_init.rs  run.rs  swapchain.rs  window_system.rs
truvis-render/src/framework/: gui.rs  mod.rs  render_core.rs  rhi.rs
truvis-render/src/gui/: gui.rs  gui_pass.rs  mesh.rs  mod.rs  ui.rs
truvis-render/src/mat_system/: mod.rs  unlit.rs
truvis-render/src/platform/: camera.rs  camera_controller.rs  input_manager.rs  mod.rs  timer.rs  ui.rs
truvis-render/src/render_pass/: compute.rs  mod.rs  phong.rs  simple_rt.rs
truvis-render/src/render_pipeline/: compute_pass.rs  mod.rs  phong.rs  phong_pass.rs  pipeline_context.rs  pipeline_tools.rs  rt_pass.rs  rt_pipeline.rs  simple_rt.rs
truvis-render/src/render_resource/: mod.rs
truvis-render/src/renderer/: acc_manager.rs  bindless.rs  cmd_allocator.rs  frame_buffers.rs  frame_context.rs  frame_controller.rs  frame_scene.rs  framebuffer.rs  gpu_scene.rs  mod.rs  pipeline_settings.rs  renderer.rs  scene_manager.rs  swapchain.rs  window_system.rs
truvis-render/src/resource/: mesh.rs  mod.rs  model.rs  obj_loader.rs
truvis-render/src/rhi/: init.rs  props.rs  tools.rs
truvis-render/src/rhi_type/: acceleration.rs  buffer.rs  command_pool.rs  descriptor.rs  image.rs  mod.rs  pipeline.rs  sampler.rs
truvis-render/src/window_system/: main_window.rs  mod.rs
truvis-rhi/: Cargo.toml
truvis-rhi/src/: lib.rs  render_core.rs  rhi.rs
truvis-rhi/src/basic/: mod.rs
truvis-rhi/src/core/: acceleration.rs  allocator.rs  buffer.rs  command_buffer.rs  command_pool.rs  command_queue.rs  debug_utils.rs  descriptor.rs  descriptor_pool.rs  device.rs  image.rs  instance.rs  mod.rs  physical_device.rs  pipeline.rs  query_pool.rs  sampler.rs  shader.rs  swapchain.rs  synchronize.rs  texture.rs  window_system.rs
truvis-rhi/src/shader_cursor/: mod.rs
truvis-winit-app/: Cargo.toml
truvis-winit-app/src/: app.rs  lib.rs  winit_event_adapter.rs
(+868 files in other folders)
