[workspace]
resolver = "2"
members = [
    "crates/truvis-gfx", # 渲染库
    "crates/truvis-model-manager", # 场景管理
    "crates/truvis-shader/layout-macro", # 用于生成 shader 布局的 macro
    "crates/truvis-shader/layout-trait", # 用于描述 shader 布局的 trait
    "crates/truvis-shader/binding", # 将 shader 代码和 rust 代码绑定的库
    "crates/truvis-cxx", # 手动绑定 assmip
    "crates/truvis-render",
    "crates/truvis-app",
    "crates/truvis-crate-tools", # 可以在各个 crate 之间共享的工具
    "crates/truvis-asset",
]


[workspace.dependencies]
truvis-gfx = { path = "crates/truvis-gfx" }
truvis-model-manager = { path = "crates/truvis-model-manager" }
truvis-cxx = { path = "crates/truvis-cxx" }
truvis-render = { path = "crates/truvis-render" }
truvis-app = { path = "crates/truvis-app" }
truvis-shader-layout-macro = { path = "crates/truvis-shader/layout-macro" }
truvis-shader-layout-trait = { path = "crates/truvis-shader/layout-trait" }
truvis-shader-binding = { path = "crates/truvis-shader/binding" }
truvis-crate-tools = { path = "crates/truvis-crate-tools" }
truvis-asset = { path = "crates/truvis-asset" }


# 图形相关的库
################################################
ash = "0.38.0"
glam = "0.22.0"

# vulkan memory allocate
# vk-mem-0.4.0 和 ash-0.38.0+1.3.281 匹配
vk-mem = "0.4.0"



# 窗口和 UI
###################################################
# create vk surface using window handle
ash-window = "0.13.0"

# window create & event loop
winit = "0.30.8"
imgui-winit-support = "0.13.0"
imgui = { version = "0.12.0", features = ["docking"] }

# 让 winit 可以和图形库通信
raw-window-handle = "0.6.2"


# 资源加载
######################################################
# image parser
image = "0.25.6"

# load gltf
gltf = "1.0.0"

# 读取 .obj
tobj = "4.0.3"


# 引擎工具
#######################################################
# print 颜色
colored = "2"

# 日志
log = "0.4.0"
env_logger = "0.11.8"
anstyle = "1.0.10"

# 计时器
chrono = "0.4.38"

uuid = "1.16.0"
rayon = "1.10.0"

# 高性能多线程通信
crossbeam-channel = "0.5.15"

# 高性能哈希表，支持代际索引
slotmap = "1.0.7"

# Tracy
tracy-client = "0.18.3"

# 编译相关
######################################################
cmake = "0.1.54"
bindgen = "0.72.1"


# 宏
######################################################
syn = { version = "2.0" }
quote = "1.0"
proc-macro2 = "1.0"



# 语言便利性工具
######################################################
# 各种自动的 macro
derive-getters = "0.2.0"
derive-new = "0.5.9"
derive_setters = "0.1.5"
derive_builder = "0.12.0"
bytemuck = "1.16.0"

# 允许超过 2 个 iter 进行 zip
itertools = "0.10.5"

# 允许更灵活的 static 变量
static_init = "1.0.3"

# 方便的初始化 array 的方法
array-init = "2.1.0"

# 根据字面量创建 CStr
# cstr = "0.2.11"

# 序列化和反序列化
serde = "1.0.152"
serde_json = "1.0.91"

# 随机数
rand = "0.8.5"
rand_derive = "0.5.0"

include_dir = "0.7.3"

# 延迟初始化 static
lazy_static = "1.4.0"

# 遍历文件夹
walkdir = "2.5.0"

bitflags = "2.3.2"

# 简化错误处理
anyhow = "1.0.84"
scopeguard = "1.2.0"

