[workspace]
resolver = "2"
members = [
    "crates/truvis-gfx", # 渲染库
    "crates/truvis-model", # 场景管理
    "crates/truvis-shader/truvis-descriptor-layout-macro", # 用于生成 shader 布局的 macro
    "crates/truvis-shader/truvis-descriptor-layout-trait", # 用于描述 shader 布局的 trait
    "crates/truvis-shader/truvis-shader-binding", # 将 shader 代码和 rust 代码绑定的库
    "crates/truvis-shader/truvis-shader-build",
    "crates/truvis-cxx/truvis-cxx-binding",
    "crates/truvis-cxx/truvis-cxx-build",
    "crates/truvis-app",
    "crates/truvis-crate-tools", # 可以在各个 crate 之间共享的工具
    "crates/truvis-asset",
    "crates/truvis-resource",
    "crates/truvis-render/truvis-render-core",
    "crates/truvis-render/truvis-render-graph",
    "crates/truvis-render/truvis-render-base",
    "crates/truvis-render/truvis-render-scene",
    "crates/truvis-platform",
]


[workspace.dependencies]
truvis-gfx = { path = "crates/truvis-gfx" }
truvis-model = { path = "crates/truvis-model" }
truvis-app = { path = "crates/truvis-app" }
truvis-descriptor-layout-macro = { path = "crates/truvis-shader/truvis-descriptor-layout-macro" }
truvis-descriptor-layout-trait = { path = "crates/truvis-shader/truvis-descriptor-layout-trait" }
truvis-shader-binding = { path = "crates/truvis-shader/truvis-shader-binding" }
truvis-shader-build = { path = "crates/truvis-shader/truvis-shader-build" }
truvis-cxx-binding = { path = "crates/truvis-cxx/truvis-cxx-binding" }
truvis-cxx-build = { path = "crates/truvis-cxx/truvis-cxx-build" }
truvis-crate-tools = { path = "crates/truvis-crate-tools" }
truvis-asset = { path = "crates/truvis-asset" }
truvis-resource = { path = "crates/truvis-resource" }
truvis-render-core = { path = "crates/truvis-render/truvis-render-core" }
truvis-render-graph = { path = "crates/truvis-render/truvis-render-graph" }
truvis-render-base = { path = "crates/truvis-render/truvis-render-base" }
truvis-render-scene = { path = "crates/truvis-render/truvis-render-scene" }
truvis-platform = { path = "crates/truvis-platform" }


# 图形相关的库
################################################
ash = { version = "0.38.0", features = ["debug"] }
glam = { version = "0.22.0", features = ["bytemuck", "rand", "serde", "bytemuck"] }

# vulkan memory allocate
# vk-mem-0.4.0 和 ash-0.38.0+1.3.281 匹配
vk-mem = "0.4.0"


# 窗口和 UI
###################################################
# create vk surface using window handle
ash-window = "0.13.0"

# window create & event loop
imgui = { version = "0.12.0", features = ["docking"] }

# 让 winit 可以和图形库通信
raw-window-handle = "0.6.2"


# 资源加载
######################################################
# image parser
image = "0.25.6"

# load gltf
gltf = "1.0.0"

# 读取 .obj
tobj = "4.0.3"


# 引擎工具
#######################################################
# print 颜色
colored = "2"

# 日志
log = "0.4.0"
env_logger = "0.11.8"
anstyle = "1.0.10"

# 计时器
chrono = "0.4.38"

uuid = { version = "1.16.0", features = ["v4"] }
rayon = "1.10.0"

# 高性能多线程通信
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8"

# 高性能哈希表，支持代际索引
slotmap = "1.0.7"
indexmap = "2.12.1"

# Tracy
tracy-client = "0.18.3"

# 编译相关
######################################################
bindgen = "0.72.1"


# 宏
######################################################
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"



# 语言便利性工具
######################################################
# 各种自动的 macro
bytemuck = { version = "1.16.0", features = ["derive"] }

# 允许超过 2 个 iter 进行 zip
itertools = "0.10.5"

# 方便的初始化 array 的方法
array-init = "2.1.0"

# 序列化和反序列化
serde = "1.0.152"
serde_json = "1.0.91"

# 随机数
rand = "0.8.5"
rand_derive = "0.5.0"

include_dir = "0.7.3"

# 延迟初始化 static
lazy_static = "1.4.0"

# 遍历文件夹
walkdir = "2.5.0"

bitflags = "2.3.2"

# 简化错误处理
anyhow = "1.0.84"
scopeguard = "1.2.0"

