[package]
name = "truvis-winit-app"
version = "0.1.0"
edition = "2024"
description = "app"


[dependencies]
truvis-app = { workspace = true }
truvis-crate-tools = { workspace = true }

log = { workspace = true }
winit = { workspace = true }
tracy-client = { workspace = true }
image = { workspace = true }
raw-window-handle = { workspace = true }
