[package]
name = "shader-layout-macro"
version = "0.1.0"
edition = "2021"
description = "简化 shader binding，通过属性宏来生成 descriptor bindings"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
shader-layout-trait = { workspace = true }
ash = { workspace = true }
