[package]
name = "truvis-app"
version = "0.1.0"
edition = "2024"
description = "app"


[dependencies]
truvis-gfx = { workspace = true }
truvis-render = { workspace = true }
truvis-shader-layout-trait = { workspace = true }
truvis-shader-layout-macro = { workspace = true }
truvis-model-manager = { workspace = true }
truvis-cxx = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-crate-tools = { workspace = true }
truvis-asset = { workspace = true }

log = { workspace = true }
ash = { workspace = true }
uuid = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
ash-window = { workspace = true }
winit = { workspace = true }
imgui = { workspace = true }
imgui-winit-support = { workspace = true }
raw-window-handle = { workspace = true }
tracy-client = { workspace = true }
image = { workspace = true }


