[package]
name = "truvis-asset"
version = "0.1.0"
edition = "2021"

[dependencies]
truvis-gfx = { workspace = true }
truvis-crate-tools = { workspace = true }

ash = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
slotmap = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-utils = "0.8"
rayon = { workspace = true }
image = { workspace = true }
vk-mem = { workspace = true }
tracy-client = { workspace = true }
