[package]
name = "truvis-crate-tools"
version = "0.1.0"
edition = "2024"
description = "在各个 crates 之间共享的工具"


[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
anstyle = { workspace = true }
chrono = { workspace = true }

rayon = { workspace = true }
walkdir = { workspace = true }