[package]
name = "truvis-cxx"
version = "0.1.0"
edition = "2021"
description = "为 Truvis 提供 Assimp 绑定"


[dependencies]
model-manager = { workspace = true }
truvis-rhi = { workspace = true }

itertools = { workspace = true }
uuid = { workspace = true }
glam = { workspace = true, features = ["bytemuck", "rand", "serde"] }


[build-dependencies]
cmake = { workspace = true }
bindgen = { workspace = true }
