[package]
name = "truvis-cxx"
version = "0.1.0"
edition = "2024"
description = "为 Truvis 提供 Assimp 绑定"


[dependencies]
truvis-model-manager = { workspace = true }
truvis-gfx = { workspace = true }

itertools = { workspace = true }
glam = { workspace = true, features = ["bytemuck", "rand", "serde"] }
tracy-client = { workspace = true }


[build-dependencies]
bindgen = { workspace = true }
