[package]
name = "truvis-gui"
version = "0.1.0"
edition = "2024"
description = ""


[dependencies]
truvis-gfx = { workspace = true }
truvis-render = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-crate-tools = { workspace = true }
truvis-resource = { workspace = true }
truvis-render-base = { workspace = true }
truvis-render-graph = { workspace = true }

log = { workspace = true }
ash = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
winit = { workspace = true }
imgui = { workspace = true }
imgui-winit-support = { workspace = true }

