[package]
name = "truvis-model-manager"
version = "0.1.0"
edition = "2024"
description = "基础的模型管理，提供了模型的基础定义"


[dependencies]
truvis-rhi = { workspace = true }

ash = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
glam = { workspace = true, features = ["bytemuck", "rand", "serde"] }
bytemuck = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
