[package]
name = "truvis-model-manager"
version = "0.1.0"
edition = "2024"
description = "基础的模型管理，提供了模型的基础定义"


[dependencies]
truvis-gfx = { workspace = true }
truvis-resource = { workspace = true }

ash = { workspace = true }
uuid = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
