[package]
name = "truvis-model"
version = "0.1.0"
edition = "2024"
description = "基础的模型管理，提供了模型的基础定义"


[dependencies]
truvis-gfx = { workspace = true }
truvis-cxx-binding = { workspace = true }
truvis-asset = { workspace = true }

ash = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
tracy-client = { workspace = true }
slotmap = { workspace = true }
