[package]
name = "truvis-render"
version = "0.1.0"
edition = "2024"

[dependencies]
truvis-rhi = { workspace = true }
shader-layout-trait = { workspace = true }
shader-layout-macro = { workspace = true }
model-manager = { workspace = true }
truvis-cxx = { workspace = true }
shader-binding = { workspace = true }
truvis-crate-tools = { workspace = true }

# 默认 features：
# - debug 表示 vulkan 结构体实现了 Debut Trait
# - loader 表示在运行时动态搜索 vulkan，体现在 Entry 对象的创建上
ash = { workspace = true, features = ["debug"] }
ash-window = { workspace = true }
winit = { workspace = true }
imgui = { workspace = true }
imgui-winit-support = { workspace = true }
raw-window-handle = { workspace = true }
image = { workspace = true }
colored = { workspace = true }
derive-getters = { workspace = true }
derive-new = { workspace = true }
derive_setters = { workspace = true }
derive_builder = { workspace = true }
gltf = { workspace = true }
# graphics math
# bytemuck：可以转换为 bytes slices
glam = { workspace = true, features = ["bytemuck", "rand", "serde"] }
bytemuck = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
static_init = { workspace = true }
array-init = { workspace = true }
cstr = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tobj = { workspace = true }
vk-mem = { workspace = true }
rand = { workspace = true }
rand_derive = { workspace = true }
include_dir = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
bitflags = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true, features = ["default"] }
anstyle = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
scopeguard = { workspace = true }
