[package]
name = "truvis-render"
version = "0.1.0"
edition = "2024"

[dependencies]
truvis-gfx = { workspace = true }
truvis-shader-layout-trait = { workspace = true }
truvis-shader-layout-macro = { workspace = true }
truvis-model-manager = { workspace = true }
truvis-cxx = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-crate-tools = { workspace = true }
truvis-asset = { workspace = true }
slotmap = "1.0"

# 默认 features：
# - debug 表示 vulkan 结构体实现了 Debut Trait
# - loader 表示在运行时动态搜索 vulkan，体现在 Entry 对象的创建上
ash = { workspace = true }
winit = { workspace = true }
# graphics math
# bytemuck：可以转换为 bytes slices
glam = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
vk-mem = { workspace = true }
log = { workspace = true }
image = { workspace = true }
tracy-client = { workspace = true }
