[package]
name = "truvis-render-scene"
version = "0.1.0"
edition = "2024"
description = ""

[dependencies]
truvis-gfx = { workspace = true }
truvis-model = { workspace = true }
truvis-render-base = { workspace = true }
truvis-resource = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-crate-tools = { workspace = true }
truvis-asset = { workspace = true }


# 默认 features：
# - debug 表示 vulkan 结构体实现了 Debut Trait
# - loader 表示在运行时动态搜索 vulkan，体现在 Entry 对象的创建上
ash = { workspace = true }
# graphics math
# bytemuck：可以转换为 bytes slices
glam = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
slotmap = { workspace = true }
tracy-client = { workspace = true }
indexmap = { workspace = true }
