[package]
name = "truvis-app"
version = "0.1.0"
edition = "2024"
description = "app"


[dependencies]
truvis-gfx = { workspace = true }
truvis-render-core = { workspace = true }
truvis-model = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-crate-tools = { workspace = true }
truvis-asset = { workspace = true }
truvis-resource = { workspace = true }
truvis-render-base = { workspace = true }
truvis-render-graph = { workspace = true }
truvis-platform = { workspace = true }

log = { workspace = true }
ash = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
ash-window = { workspace = true }
imgui = { workspace = true }
raw-window-handle = { workspace = true }
tracy-client = { workspace = true }

