[package]
name = "truvis-scene"
version = "0.1.0"
edition = "2024"
description = ""

[dependencies]
truvis-gfx = { workspace = true }
truvis-render-interface = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-crate-tools = { workspace = true }
truvis-asset = { workspace = true }


ash = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
slotmap = { workspace = true }
tracy-client = { workspace = true }
indexmap = { workspace = true }
