[package]
name = "truvis-render-core"
version = "0.1.0"
edition = "2024"

[dependencies]
truvis-gfx = { workspace = true }
truvis-shader-binding = { workspace = true }
truvis-asset = { workspace = true }
truvis-resource = { workspace = true }
truvis-render-graph = { workspace = true }
truvis-render-base = { workspace = true }
truvis-render-scene = { workspace = true }
truvis-model = { workspace = true }
truvis-cxx-binding = { workspace = true }
truvis-crate-tools = { workspace = true }
truvis-platform = { workspace = true }


# 默认 features：
# - debug 表示 vulkan 结构体实现了 Debut Trait
# - loader 表示在运行时动态搜索 vulkan，体现在 Entry 对象的创建上
ash = { workspace = true }
# graphics math
# bytemuck：可以转换为 bytes slices
glam = { workspace = true }
bytemuck = { workspace = true }
tracy-client = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
imgui = { workspace = true }
raw-window-handle = { workspace = true }

